css: fix scrollbars
The custom style properties have gone away, they are now just
themable through regular css.
https://phabricator.endlessm.com/T11000

--- a/data/css/buffet_core.css
+++ b/data/css/buffet_core.css
@@ -7,11 +7,11 @@ EosWindow {
 }
 
 scrollbar {
-    -GtkRange-trough-border: 3px;
-    -GtkRange-slider-width: 8px;
+    padding: 3px;
 }
 
 scrollbar slider {
+    min-width: 8px;
     background-color: #9b9b9b;
     border-radius: 20px;
 }
